tester/src/test/aya/failure/operator/ambiguous.aya.txt
In file $FILE:4:17 ->

  2 | def `=` test3 : Set => test3
  3 | 
  4 | def fail : 1 + 1 = 2 => fail
                       ^^
  
Error: Ambiguous operator precedence detected between `+` and `=`
note: Use `bind` statement or insert parentheses to make it clear.
Desugaring interrupted due to error(s).
What are you doing?
